--- a/index.html
+++ b/index.html
@@ -2,34 +2,11 @@
 <head>
     <title>Contact Form</title>
 </head>
-<body>
-    <h3>Contact us</h3>
-    <form id="fcf-form-id" class="fcf-form-class" method="post" action="contact-form-process.php">
-            <label for="Name" class="fcf-label">Your name</label>
-            <div class="fcf-input-group">
-                <input type="text" id="Name" name="Name" class="fcf-form-control" required>
-            </div>
-        <div class="fcf-form-group">
-            <label for="Email" class="fcf-label">Your email address</label>
-            <div class="fcf-input-group">
-                <input type="email" id="Email" name="Email" class="fcf-form-control" required>
-            </div>
-        <div class="fcf-form-group">
-            <label for="Message" class="fcf-label">Your message</label>
-            <div class="fcf-input-group">
-                <textarea id="Message" name="Message" class="fcf-form-control" rows="6" maxlength="3000" required></textarea>
-            </div>
-        </div>
-        <div class="fcf-form-group">
-            <button type="submit" id="fcf-button" class="fcf-btn fcf-btn-primary fcf-btn-lg fcf-btn-block">Send</button>
-        </div>
 
-<script type="text/javascript"> function iframeLoaded() {
-var iFrameID = document.getElementById('idIframe'); if(iFrameID) {
-iFrameID.height = "";
-iFrameID.height = iFrameID.contentWindow.document.body.scrollHeight + "px"; }
-}
-</script>
-        
-</body>
+
+    
+
+        <iframe src="contact.php" style="border: none; width:100%; height:700px; margin: 0 0 0 1%;"></iframe>
+
+
 </html>
