--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <head>
     <title>Contact Form</title>
 </head>
-
+<body>
 
     
 
         <iframe src="contact.php" style="border: none; width:100%; height:700px; margin: 0 0 0 1%;"></iframe>
 
-
+</body>
 </html>
