--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 </head>
 <body>
 
-    
-
-        <iframe src="contact.php" style="border: none; width:100%; height:700px; margin: 0 0 0 1%;"></iframe>
+    <script type="text/javascript"> function iframeLoaded() {
+    var iFrameID = document.getElementById('idIframe'); if(iFrameID) {
+    iFrameID.height = "";
+    iFrameID.height = iFrameID.contentWindow.document.body.scrollHeight + "px"; }
+    }
+    </script>
 
 </body>
 </html>
